I corrected the text index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		     <img src="images/banner-img.png" alt="html"> 
 		     <div class="top-left">
 		     	<p>ამბები არ არის ყოველთვის</p>
-		     	<p>ერთმნიშვნელოვანდ</p>
+		     	<p>ერთმნიშვნელოვნად</p>
 		     	<p id="Roboto">#000000</p>
 		     	<p>ან</p>
 		     	<p id="roboto">#FFFFFF</p>
